# yatrisuraksha

./: .gitignore  README.md  commit.py  docker-compose.yml
app/yatri_suraksha/: README.md  pubspec.yaml
app/yatri_suraksha/android/app/: build.gradle.kts
app/yatri_suraksha/android/app/src/main/: AndroidManifest.xml
app/yatri_suraksha/android/app/src/main/kotlin/com/example/yatri_suraksha/: MainActivity.kt
app/yatri_suraksha/ios/Runner/: Info.plist
app/yatri_suraksha/ios/Runner.xcodeproj/: project.pbxproj
app/yatri_suraksha/lib/: main.dart  qr_scanner_screen.dart  tourist_map_screen.dart
app/yatri_suraksha/linux/: CMakeLists.txt
app/yatri_suraksha/linux/runner/: my_application.cc
app/yatri_suraksha/macos/Runner.xcodeproj/: project.pbxproj
app/yatri_suraksha/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/yatri_suraksha/macos/Runner/Configs/: AppInfo.xcconfig
app/yatri_suraksha/test/: widget_test.dart
app/yatri_suraksha/web/: index.html  manifest.json
app/yatri_suraksha/windows/: CMakeLists.txt
app/yatri_suraksha/windows/runner/: Runner.rc  main.cpp
backend/: Dockerfile  README.md  docker-compose.yml  go.mod  init.sql  main.go
blockchain/: IncidentAnchor.sol
dashboard/client/: package-lock.json  package.json
dashboard/client/public/: index.html
dashboard/client/src/: App.js  index.css
dashboard/client/src/components/: TouristSafetyDashboard.jsx  tourist.css
dashboard/server/: index.js  package-lock.json  package.json
sys/YatriSurakshaRegistration/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
